--- a/data_process.ipynb
+++ b/data_process.ipynb
@@ -5,8 +5,26 @@
    "id": "01f0961b-fb04-4a6b-9873-c4850a955948",
    "metadata": {},
    "source": [
-    "init"
+    "# Data Prep"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf059e4-e00f-4cd1-a4a5-c92fbca37bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be4f5ce-1f3f-420b-91de-2dac8d3bbc3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
