--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -904,7 +904,7 @@
    "id": "8dc20679-a3bb-4bd6-8c10-46c69a11fe74",
    "metadata": {},
    "source": [
-    "**Analysis:** There are 5 classes (extremely unlikely to extremely likely). There is a class imbalance since class 3 and class 5 have fewer data compared to the other classes. Class 1 and class 2 have the most. To handle class imbalance, oversampling will be used and f1-score instead of accuracy when training the model. "
+    "**Analysis:** There are 5 classes (extremely unlikely to extremely likely). There is a class imbalance since class 3 and class 5 have fewer data compared to the other classes. Class 1 and class 2 have the most. To handle class imbalance, oversampling will be used and f1-score instead of accuracy when training/testing the model. "
    ]
   }
  ],
